Fix minor issues
* Expand the special thanks to show more names by default
* Add default value to ini editors
* Fix "fun" not showing hint text
* Clamp "Real/Not Real" between values accepted by the game

--- a/web/stylesheets/dialog.css
+++ b/web/stylesheets/dialog.css
@@ -81,7 +81,7 @@
     border: 1px solid black;
     display: flex;
     font-weight: bold;
-    height: 5em;
+    height: 7em;
     justify-content: center;
     margin: 5px 0;
     overflow: scroll;
